--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://150.136.51.51:5432/lanbau2
+spring.datasource.url=jdbc:postgresql://localhost/lanbau2
 spring.datasource.username=postgres
 spring.datasource.password=mango
 
