is it the passwd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.maximumPoolSize=5
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://127.0.0.1/lanbau2
 spring.datasource.username=postgres
-spring.datasource.password=mango
+spring.datasource.password=mangolijie98$LIM
 
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
